--- a/convex_optimization.ipynb
+++ b/convex_optimization.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "id": "316c8f40",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "numpy: 2.1.3\n",
-      "cvxpy: 1.7.3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -23,15 +14,12 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "import cvxpy as cp\n",
     "\n",
-    "np.random.seed(0)\n",
-    "\n",
-    "print(\"numpy:\", np.__version__)\n",
-    "print(\"cvxpy:\", cp.__version__)"
+    "np.random.seed(0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "id": "59fc10c5",
    "metadata": {},
    "outputs": [
@@ -69,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "id": "77b4e06d",
    "metadata": {},
    "outputs": [
@@ -106,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "id": "852e3b85",
    "metadata": {},
    "outputs": [
@@ -150,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "id": "513c65e9",
    "metadata": {},
    "outputs": [
@@ -194,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "id": "05db6183",
    "metadata": {},
    "outputs": [
@@ -240,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "id": "a2352864",
    "metadata": {},
    "outputs": [
