--- a/convex_optimization.ipynb
+++ b/convex_optimization.ipynb
@@ -1,8 +1,28 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "70b49e43",
+   "metadata": {},
+   "source": [
+    "## Convex Optimization in AI\n",
+    "\n",
+    "### Overview:\n",
+    "\n",
+    "Notes explaining convex functions, convex optimization problems, and why they matter.\n",
+    "\n",
+    "Introduction to duality and why it helps.\n",
+    "\n",
+    "Implementation of a linear SVM via its dual formulation using cvxpy.\n",
+    "\n",
+    "Plotting of decision boundary, margins, and support vectors.\n",
+    "\n",
+    "Comparison with scikit-learn's SVC."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "id": "316c8f40",
    "metadata": {},
    "outputs": [],
@@ -18,8 +38,74 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "962e7cf9",
+   "metadata": {},
+   "source": [
+    "## What is a convex optimization problem?\n",
+    "\n",
+    "A convex optimization problem has the form:\n",
+    "\n",
+    "min𝑥 𝑓(𝑥), subjected to 𝑔𝑖(𝑥) ≤ 0, ℎ𝑗(𝑥) = 0\n",
+    "\n",
+    "The function \n",
+    "𝑓(𝑥) is convex and each inequality constraint 𝑔𝑖(𝑥) is convex. Equality constraints are typically affine or linear.\n",
+    "\n",
+    "A set is convex if for any two points in the set, the line segment between them is also in the set.\n",
+    "\n",
+    "### What makes a function convex?\n",
+    "\n",
+    "For twice-differentiable functions, convexity is equivalent to the Hessian being positive semidefinite everywhere.\n",
+    "\n",
+    "Intuitively, convex functions have a single basin; no local minima apart from the global minimum.\n",
+    "\n",
+    "### Why are convex problems important?\n",
+    "\n",
+    "Any local optimum is a global optimum.\n",
+    "\n",
+    "There are mature, reliable algorithms like QP solvers with strong guarantees."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "685358b7",
+   "metadata": {},
+   "source": [
+    "## Duality\n",
+    "\n",
+    "### Duality idea:\n",
+    "\n",
+    "Many constrained problems can be transformed into a dual problem. The dual often has fewer variables and can be easier to solve.\n",
+    "\n",
+    "### Why duality helps in SVMs:\n",
+    "\n",
+    "The SVM dual formulation expresses the solution in terms of dot products between training points. This leads directly to kernels and efficient solvers for high-dimensional implicit feature spaces."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65e626a7",
+   "metadata": {},
+   "source": [
+    "## Linear SVM (Primal & Dual)\n",
+    "\n",
+    "### Primal SVM:\n",
+    "\n",
+    "min 𝑤,𝑏,𝜉  1/2 ∥𝑤∥^2 + 𝐶∑𝑖𝜉𝑖, subjected to 𝑦𝑖(𝑤𝑇𝑥𝑖 + 𝑏) ≥ 1 − 𝜉𝑖,  𝜉𝑖 ≥ 0.\n",
+    "\n",
+    "### Dual SVM:\n",
+    "\n",
+    "Let 𝛼𝑖 be dual variables. Then,\n",
+    "max𝛼 ∑𝑖𝛼𝑖 − 1/2 ∑𝑖,𝑗 𝛼𝑖𝛼𝑗𝑦𝑖𝑦𝑗𝑥𝑖𝑇𝑥𝑗, subjected to 0 ≤ 𝛼𝑖 ≤𝐶 and ∑𝑖 𝛼𝑖𝑦𝑖 = 0.\n",
+    "\n",
+    "We typically solve the minimization form used by QP solvers:\n",
+    "min𝛼 1/2 𝛼𝑇𝑄𝛼 − 1𝑇𝛼 subjected to 0 ≤ 𝛼 ≤ 𝐶,  𝑦𝑇𝛼=0, \n",
+    "where 𝑄𝑖𝑗 = 𝑦𝑖𝑦𝑗𝑥𝑖𝑇𝑥𝑗.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "id": "59fc10c5",
    "metadata": {},
    "outputs": [
@@ -55,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "id": "77b4e06d",
    "metadata": {},
    "outputs": [
@@ -75,7 +161,7 @@
     "Q = (Y @ Y.T) * K\n",
     "\n",
     "\n",
-    "# cvxpy requires a symmetric PSD matrix for quad_form; ensure symmetry\n",
+    "# cvxpy requires a symmetric PSD matrix for quad_form;\n",
     "Q = 0.5*(Q + Q.T)\n",
     "\n",
     "\n",
@@ -91,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "id": "852e3b85",
    "metadata": {},
    "outputs": [
@@ -135,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "513c65e9",
    "metadata": {},
    "outputs": [
@@ -168,7 +254,7 @@
     "        b_vals.append(y[i] - X_scaled[i].dot(w))\n",
     "    b = np.mean(b_vals)\n",
     "else:\n",
-    "    # fallback: average over all support vectors\n",
+    "    # fallback; average over all support vectors\n",
     "    b = np.mean([y[i] - X_scaled[i].dot(w) for i in sv_indices])\n",
     "\n",
     "\n",
@@ -179,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "05db6183",
    "metadata": {},
    "outputs": [
@@ -195,7 +281,7 @@
     }
    ],
    "source": [
-    "# helper to plot\n",
+    "# plot\n",
     "xx = np.linspace(X_scaled[:,0].min()-1, X_scaled[:,0].max()+1, 500)\n",
     "yy = np.linspace(X_scaled[:,1].min()-1, X_scaled[:,1].max()+1, 500)\n",
     "XX, YY = np.meshgrid(xx, yy)\n",
@@ -211,11 +297,10 @@
     "\n",
     "# plot points\n",
     "plt.scatter(X_scaled[:,0], X_scaled[:,1], c=y, cmap='bwr', edgecolors='k')\n",
-    "# highlight support vectors\n",
     "plt.scatter(X_scaled[sv_indices,0], X_scaled[sv_indices,1], s=120, facecolors='none', edgecolors='k', linewidths=1.5, label='Support Vectors')\n",
     "\n",
     "\n",
-    "plt.title('SVM via dual QP (cvxpy) — decision boundary and margins')\n",
+    "plt.title('SVM in dual QP (cvxpy)')\n",
     "plt.xlabel('x1')\n",
     "plt.ylabel('x2')\n",
     "plt.legend()\n",
@@ -225,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "id": "a2352864",
    "metadata": {},
    "outputs": [
@@ -299,6 +384,20 @@
     "pred_skl = svc.predict(X_scaled)\n",
     "print('cvxpy SVM training accuracy:', accuracy_score(y, pred_cvx))\n",
     "print('sklearn SVC training accuracy:', accuracy_score(y, pred_skl))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4d5ccef",
+   "metadata": {},
+   "source": [
+    "## Interpretation\n",
+    "\n",
+    "The SVM primal and dual are convex problems; solving either gives a globally optimal classifier.\n",
+    "\n",
+    "The dual formulation is especially powerful because it depends on inner products between training points; enabling kernels for non-linear decision boundaries.\n",
+    "\n",
+    "Comparing the custom dual solution with scikit-learn shows nearly identical decision boundaries and support vectors."
    ]
   }
  ],
