--- a/convex_optimization.ipynb
+++ b/convex_optimization.ipynb
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "852e3b85",
    "metadata": {},
    "outputs": [
@@ -208,7 +208,7 @@
     "\n",
     "\n",
     "prob = cp.Problem(objective, constraints)\n",
-    "prob.solve(solver=cp.OSQP, verbose=False)\n",
+    "prob.solve(solver=cp.OSQP, verbose=False) # Operator Splitting Quadratic Program solver.\n",
     "\n",
     "\n",
     "print('Status:', prob.status)\n",
