--- a/convex_optimization.ipynb
+++ b/convex_optimization.ipynb
@@ -246,7 +246,7 @@
     "sv_indices = np.where(sv_mask)[0]\n",
     "\n",
     "\n",
-    "# Compute bias b by averaging over support vectors with 0 < alpha < C (i.e., margin SVs)\n",
+    "# Compute bias b by averaging over support vectors with 0 < alpha < C\n",
     "margin_sv_mask = (alpha_opt > eps) & (alpha_opt < C - 1e-8)\n",
     "if margin_sv_mask.sum() > 0:\n",
     "    b_vals = []\n",
