--- a/convex_optimization.ipynb
+++ b/convex_optimization.ipynb
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "59fc10c5",
    "metadata": {},
    "outputs": [
@@ -127,7 +127,7 @@
     "y = 2*(y) - 1\n",
     "\n",
     "\n",
-    "# Standardize features for numerical stability\n",
+    "# standardize features for numerical stability\n",
     "X_scaled = StandardScaler().fit_transform(X)\n",
     "\n",
     "plt.figure(figsize=(6,5))\n",
