--- a/convex_optimization.ipynb
+++ b/convex_optimization.ipynb
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "77b4e06d",
    "metadata": {},
    "outputs": [
@@ -157,11 +157,11 @@
     "# Build Q = (y y^T) * (X X^T)\n",
     "n = X_scaled.shape[0]\n",
     "Y = y.reshape(-1,1)\n",
-    "K = X_scaled @ X_scaled.T # linear kernel matrix   \n",
+    "K = X_scaled @ X_scaled.T # linear kernel matrix or gram matrix measures similarity between samples\n",
     "Q = (Y @ Y.T) * K\n",
     "\n",
     "\n",
-    "# cvxpy requires a symmetric PSD matrix for quad_form;\n",
+    "# cvxpy requires a symmetric PSD matrix for quadratic form;\n",
     "Q = 0.5*(Q + Q.T)\n",
     "\n",
     "\n",
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "852e3b85",
    "metadata": {},
    "outputs": [
@@ -212,7 +212,7 @@
     "\n",
     "\n",
     "print('Status:', prob.status)\n",
-    "print('Optimal value (dual objective):', prob.value)\n",
+    "print('Optimal value (dual objective):', prob.value) # gives the minimized value of the dual objective\n",
     "\n",
     "\n",
     "alpha_opt = alpha.value\n",
