--- a/convex_optimization.ipynb
+++ b/convex_optimization.ipynb
@@ -157,9 +157,8 @@
     "# Build Q = (y y^T) * (X X^T)\n",
     "n = X_scaled.shape[0]\n",
     "Y = y.reshape(-1,1)\n",
-    "K = X_scaled @ X_scaled.T # linear kernel matrix or gram matrix measures similarity between samples\n",
-    "Q = (Y @ Y.T) * K\n",
-    "\n",
+    "K = X_scaled @ X_scaled.T # linear kernel matrix or gram matrix measures similarity between samples x_i and x_j.\n",
+    "Q = (Y @ Y.T) * K # determines how each pair of training points influences the shape and position of the separating hyperplane.\n",
     "\n",
     "# cvxpy requires a symmetric PSD matrix for quadratic form;\n",
     "Q = 0.5*(Q + Q.T)\n",
