--- a/convex_optimization.ipynb
+++ b/convex_optimization.ipynb
@@ -164,7 +164,7 @@
     "Q = 0.5*(Q + Q.T)\n",
     "\n",
     "\n",
-    "# Vector of ones\n",
+    "# Vector of ones used in the linear term.\n",
     "ones = np.ones(n)\n",
     "\n",
     "# Regularization parameter\n",
