--- a/convex_optimization.ipynb
+++ b/convex_optimization.ipynb
@@ -211,11 +211,11 @@
     "\n",
     "\n",
     "print('Status:', prob.status)\n",
-    "print('Optimal value (dual objective):', prob.value) # gives the minimized value of the dual objective\n",
+    "print('Optimal value:', prob.value) # gives the minimized value of the dual objective\n",
     "\n",
     "\n",
     "alpha_opt = alpha.value\n",
-    "print('Some alpha values (first 10):', alpha_opt[:10])"
+    "print('Some alpha values:', alpha_opt[:10])"
    ]
   },
   {
