--- a/convex_optimization.ipynb
+++ b/convex_optimization.ipynb
@@ -127,7 +127,7 @@
     "y = 2*(y) - 1\n",
     "\n",
     "\n",
-    "# standardize features for numerical stability\n",
+    "# standardize features used in normalizing that used for numerical stability\n",
     "X_scaled = StandardScaler().fit_transform(X)\n",
     "\n",
     "plt.figure(figsize=(6,5))\n",
