--- a/convex_optimization.ipynb
+++ b/convex_optimization.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "316c8f40",
    "metadata": {},
    "outputs": [],
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "59fc10c5",
    "metadata": {},
    "outputs": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "77b4e06d",
    "metadata": {},
    "outputs": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "852e3b85",
    "metadata": {},
    "outputs": [
@@ -185,8 +185,8 @@
      "output_type": "stream",
      "text": [
       "Status: optimal\n",
-      "Optimal value (dual objective): -15.05072972127072\n",
-      "Some alpha values (first 10): [ 1.00000000e+00 -4.25977557e-20 -5.00953861e-20 -9.27348200e-20\n",
+      "Optimal value: -15.05072972127072\n",
+      "Some alpha values: [ 1.00000000e+00 -4.25977557e-20 -5.00953861e-20 -9.27348200e-20\n",
       " -3.44903240e-20 -2.43531229e-20 -3.44413143e-21 -1.93223025e-20\n",
       " -2.08385454e-20 -3.49701758e-20]\n"
      ]
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "513c65e9",
    "metadata": {},
    "outputs": [
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "05db6183",
    "metadata": {},
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "a2352864",
    "metadata": {},
    "outputs": [
